# zmq_protobuf_test

./: .gitignore  CMakeLists.txt  README.md
fbs/: char_entity.fbs
proto/: message.pb.cc  message.pb.h  message.proto
schemas/: char_entity.fbs
src/: main.cpp
src/entities/: char_entity.h
src/helpers/: cereal_helpers.h  flatbuffer_helpers.h  zmq_helpers.h
src/map/: main.cpp
src/world/: main.cpp
